# YC-applier

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
api/: main.py  state.py
api/routes/: applications.py  config.py  dashboard.py  drafts.py  pipeline.py
config/: settings.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: Applications.jsx  Dashboard.jsx  Pipeline.jsx  Review.jsx
tests/: test_api_applications.py  test_api_config.py  test_api_dashboard.py  test_api_drafts.py  test_api_pipeline.py  test_drafter.py  test_matcher.py  test_parser.py  test_state.py  test_tracker.py
yc_applier/: main.py
yc_applier/ai/: drafter.py  matcher.py  prompts.py
yc_applier/application/: reviewer.py  submitter.py
yc_applier/auth/: login.py
yc_applier/resume/: parser.py
yc_applier/scraper/: jobs.py  models.py
yc_applier/storage/: tracker.py
